--- a/src/views/layout/layout.scss
+++ b/src/views/layout/layout.scss
@@ -15,6 +15,8 @@
   }
 }
 .layout-content{
+  height: 100%;
+  overflow: auto;
   border: 30px solid #f7f7f7;
   background: #fff;
   padding: 30px;
